# notion-clone-backend

./: Cargo.toml  LICENSE  README.md
crates/api/: Cargo.toml
crates/api/src/: app.rs  main.rs
crates/api/src/routes/: auth.rs  health_check.rs
crates/core/: config.rs  main.rs
crates/database/sqls/: _create_database.sql
crates/database/src/: main.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
http/: get.http
requests/: auth.http  health_check.http  root.http
