[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { version = "0.1.0", path = "../database" }
models = { version = "0.1.0", path = "../models" }
axum = "0.6.20"
# serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
